[tool.poetry]
name = "mtg-workflows"
version = "0.1.0"
description = "Workflows for MTG"
readme = "README.md"
license = "None"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

# Core LlamaIndex packages
llama-index-core = "0.13.0"
llama-index = "0.13.0"

# LLM integrations
llama-index-llms-huggingface = "0.6.0"
llama-index-llms-ollama = "0.7.0"

# Embedding models
llama-index-embeddings-huggingface = "0.6.0"

# Tools for research and data gathering
llama-index-tools-requests = "0.5.0"
llama-index-tools-google = "0.6.0"

# Vector store
llama-index-vector-stores-pinecone = "0.7.0"

# OCR and image processing for card scanning
opencv-python = "4.10.0.84"
pytesseract = "0.3.10"
pillow = "10.4.0"
easyocr = "1.7.1"

# Essential utilities
pydantic = "^2.11.5"
python-dotenv = "1.0.1"
httpx = "0.27.0"
pinecone-client = "5.0.1"

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.24.0"
black = "24.8.0"
isort = "5.13.2"
flake8 = "7.1.1"
mypy = "1.11.2"
pre-commit = "3.8.0"
jupyter = "1.1.1"
ipykernel = "6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
